--- a/.github/workflows/Openshift.yml
+++ b/.github/workflows/Openshift.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   build-and-push: 
     name: Build and push to github container registry
-    runs-on: latest
+    runs-on: ubuntu-latest
     environment: development
 
     outputs:
